# cryptoapi-samples

./: .clang-format  CMakeLists.txt  README.md
certificates/: CMakeLists.txt  main.cpp
certificates/common/: store.hpp
certificates/request/: CMakeLists.txt  main.cpp
certificates/signing/: CMakeLists.txt  main.cpp
certificates/store/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/include/: common.hpp  windows.hpp
common/include/details/: certificate.hpp  crypto.hpp  encoding.hpp  error.hpp  network.hpp  utils.hpp  windows.hpp
common/src/: common.cpp
common/src/details/: certificate.cpp  crypto.cpp  network.cpp  utils.cpp
cryptoproviders/: CMakeLists.txt
cryptoproviders/container/: CMakeLists.txt  main.cpp
cryptoproviders/enum-provider-types/: CMakeLists.txt  main.cpp
cryptoproviders/enum-providers/: CMakeLists.txt  main.cpp
cryptoproviders/provider-params/: CMakeLists.txt  main.cpp
secure-channel/: CMakeLists.txt  README.txt
secure-channel/client/: CMakeLists.txt  main.cpp
secure-channel/common/: pipe.hpp  protocol.hpp  utils.hpp
secure-channel/protocol/: protocol.hpp
secure-channel/server/: CMakeLists.txt  main.cpp
